hphp/hack/test/full_fidelity/cases/module_newtype_bad4.php
<?hh
<<file:__EnableUnstableFeatures("modules")>>
module foo;
internal module newtype Foo = int; // error
